<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TreeDB</string>
    <string name="browseTabText">Browse</string>
    <string name="createTabText">Create</string>
    <string name="settingsTabText">Settings</string>
    <string name="nearTabText">near</string>
    <string name="recentTabText">recent</string>
    <string name="allTabText">all</string>
    <string name="searchText">search</string>
    
    <string name="nameLabel">Name</string>
    <string name="newTreeLabel">Add new Tree</string>
    <string name="positionLabel">Position</string>
    <string name="commentLabel">Write a comment</string>
    
    <string name="ageLabel">Age</string>
    <string name="sizeLabel">Size(m)</string>
    <string name="optionsLabel">Options</string>
    
    <string name="pictureButtonText">Take a photo!</string>
    <string name="locationToggleOn">include Location</string>
    <string name="locationToggleOff">exclude Location</string>
    <string name="createButtonText">Submit</string>
    <string name="selectButtonText">Select Tree</string>
    
    <string name="avatarImage">Avatar</string>
    <string name="pwdButton">Change Password</string>
    <string name="delButton">Delete Account</string>
    
    <string name="myTreeList">My Trees</string>
    <string name="groupList">Groups</string>
    
    <string name="pwdLabel">Password</string>
    <string name="logonLabel">Logon</string>
    <string name="logonPasswordFailure">Password failure. Please try again.</string>
    <string name="logonUserFailure">Username failure. Not the right name?</string>
    <string name="createUserLabel">create new User</string>
    <string name="createUserButtonText">create</string>
    <string name="nameFailure">Please fill in your name.</string>
    <string name="pwdFailure">Please fill in your password.</string>
    <string name="avatarFailure">Please add an avatar.</string>
    <string name="miscFailure">An unknown failure ocurred.</string>
    <string name="no_tree">There is no tree in DB.</string>
    
    <string name="change_Title">Change password</string>
    <string name="oldPwd">old password:</string>
    <string name="newPwd">new password:</string>
    <string name="repeateNewPwd">repeate new password:</string>
    
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    
    <string name="no_picture">Please take a picture.</string>
	<string name="no_name">Please insert name.</string>
	<string name="no_size">Please insert size.</string>
	<string name="no_age">Please insert age.</string>
	<string name="no_loc_support">Your device does not support location information in pictures.</string>
	<string name="db_error">An database error occured.</string>
	<string name="network_error">There is no network connection.</string>
	<string name="db_success">Tree was uploaded.</string>
	
	<string name="comment_list_avatar">user avatar</string>
	<string name="empty_comment">No comment was written.</string>
	<string name="empty_treelist">There are no trees to show.</string>
	
	<string name="latitude">lat.</string>
	<string name="longitude">long.</string>
	<string name="no_location">n.a.</string>
	
	<string name="no_image">There is no Image to show.</string>
	
	<string name="groupToggleOn">Subscribed</string>
    <string name="groupToggleOff">Subscribe</string>
    <string name="groupToggleCreate">Create</string>
    <string name="empty_groups">Add new Group.</string>
    
    <string name="create_group_title">Create new Group</string>
    <string name="join_group_title">Join to group</string>
    <string name="leave_group_title">Leave group</string>
    <string name="groupname">Name of Group</string>
    <string name="group_pwd">Password</string>
    <string name="group_pwd_2">Repeate Password</string>
    <string name="join_group_pwd">Enter group password:</string>
    <string name="leave_group_text">Do you really want to leave this group?</string>
    
    <string name="treelist_dialog_title">Select tree to add picture.</string>
    <string name="tree_selection_error">Please select the tree you want to add a picture.</string>
    
    <string name="no_rights_comment_read">You need at least 10 Photos to read comments.</string>
     <string name="no_rights_comment_write">You need at least 15 Photos to read comments.</string>
     
     <string name="delete_user_text">Do you really want to delete this user? All data associated with this account will be deleted.</string>
     <string name="delete_user_title">Delete User</string>
</resources>
