<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/groupname"
    />
    <EditText
        android:id="@+id/create_group_groupname"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/groupname"/>
    <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/group_pwd"
    />
    <EditText
        android:id="@+id/create_group_grouppwd"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/groupname"
    	android:inputType="textPassword"/>
    <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/group_pwd_2"
    />
    <EditText
        android:id="@+id/create_group_grouppwd2"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/groupname"
    	android:inputType="textPassword"/>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
    >
    	<Button
    	    android:id="@+id/create_group_ok_button"
    		android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/ok_button"/>
    	<Button
    	    android:id="@+id/create_group_cancel_button"
    		android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/cancel_button"/>
    </LinearLayout>
</LinearLayout>