<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <ImageView 
        android:id="@+id/avatarImage"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_weight=".5"
   		android:layout_marginTop="15dip"
   		android:contentDescription="@string/avatarImage"
   		android:layout_gravity="center_horizontal"
   	/>
    
    <Button 
        android:id="@+id/pictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pictureButtonText"
        android:layout_gravity="center_horizontal"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:text="@string/nameLabel"
		  	android:layout_weight="5"/>
		<EditText
		  	android:id="@+id/nametext"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:inputType="text"
		  	android:layout_weight="2"/>
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:text="@string/pwdLabel"
		  	android:layout_weight="5"/>
		<EditText
		  	android:id="@+id/pwdtext"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:inputType="textPassword"
		  	android:layout_weight="2"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createUserButtonText"
        android:layout_gravity="center_horizontal"
        />
    
</LinearLayout>