<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_body"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/oldPwd"
    android:layout_margin="5dip"
    android:layout_weight="1"/>
<EditText
    android:id="@+id/changepassword:oldPwd"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:inputType="textPassword"
    android:layout_weight="1"/>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:text="@string/newPwd"
    android:layout_weight="1"/>
<EditText
    android:id="@+id/changepassword:newPwd"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:inputType="textPassword"
    android:layout_weight="1"/>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:text="@string/repeateNewPwd"
    android:layout_weight="1"/>
<EditText
    android:id="@+id/changepassword:repeateNewPwd"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:inputType="textPassword"
    android:layout_weight="1"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dip"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
    <Button
        android:id="@+id/change:ok_button"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:text="@string/ok_button"
    	android:layout_weight="1"
    />
    <Button
        android:id="@+id/change:cancel_button"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:text="@string/cancel_button"
    	android:layout_weight="1"
    />
	</LinearLayout>
   
</LinearLayout>