<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/delete_user_text"
    />
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="1.0"
    >
    	<Button 
    		android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/delete_user_ok_button"
	    	android:text="@string/ok_button"
	    	android:layout_weight=".50"
	    	/>
    	<Button 
    		android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/delete_user_cancel_button"
	    	android:text="@string/cancel_button"
	    	 android:layout_weight=".50"
	    	/>
    </LinearLayout>

</LinearLayout>