<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="2.6"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="horizontal"
    	android:weightSum="1.0"
    	android:layout_weight="1.0">
    	
        <ImageView 
            android:id="@+id/avatarImage"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="15dip"
    		android:contentDescription="@string/avatarImage"
    		android:layout_weight="0.2"
    	/>
        
        <LinearLayout
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_marginTop="15dip"
    		android:layout_weight=".8">        
            
            <Button
                android:id="@+id/pwdButton" 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/pwdButton"/>
            <Button 
                android:id="@+id/delButton"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/delButton"/>
    	</LinearLayout>
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:layout_weight="0.8"
    	>

	    <TextView 
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/myTreeList"/>
	    
	    <ListView 
	        android:id="@+id/myTreeList"
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:clickable="false"/>
    
	</LinearLayout>
	 
	<LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	    	android:layout_weight="0.8"
	    	>
	    
		    <TextView 
		        android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/groupList"/>
		    
		    <ListView 
		        android:id="@+id/myGroupList"
		        android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
		    
	</LinearLayout> 
</LinearLayout>
    