<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:text="@string/nameLabel"
		  	android:layout_weight="5"/>
		<EditText
		  	android:id="@+id/nametext"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:inputType="text"
		  	android:layout_weight="2"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:text="@string/pwdLabel"
		  	android:layout_weight="5"/>
		<EditText
		  	android:id="@+id/pwdtext"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:inputType="textPassword"
		  	android:layout_weight="2"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<Button
		    android:id="@+id/logonbutton"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:text="@string/logonLabel"/>
		<Button
		  	android:id="@+id/createuserbutton"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:text="@string/createUserLabel"/>
    </LinearLayout>
    
    
</LinearLayout>