<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal">
  	<ImageView
		android:id="@+id/treelist_picture"
		android:layout_width="30dip"
		android:layout_height="30dip"
		android:paddingRight="6dip"
		android:contentDescription="@string/no_image"
		/>
  	<LinearLayout 
  	    android:layout_width="wrap_content"
  	    android:layout_height="fill_parent">
		<LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
				<TextView 
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:layout_weight="5"
				  	android:text="@string/nameLabel"/>
				<TextView
				  	android:id="@+id/treelist_nametext"
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:layout_weight="2"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
				<TextView 
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:text="@string/positionLabel"
				  	android:layout_weight="2"/>
				<TextView
				  	android:id="@+id/treelist_lattext"
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:layout_weight="2"/>
				<TextView 
				  	android:id="@+id/treelist_longtext"
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:layout_weight="2"/>
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
				<TextView 
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:text="@string/sizeLabel"
				  	android:layout_weight="1"/>
				<TextView
				  	android:id="@+id/treelist_sizetext"
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:layout_weight="1"/>
				<TextView 
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:text="@string/ageLabel"
				  	android:layout_weight="1"/>
				<TextView 
				  	android:id="@+id/treelist_agetext"
				  	android:layout_width="fill_parent"
				  	android:layout_height="wrap_content"
				  	android:layout_weight="1"/>
		    </LinearLayout>  	 	
  	 </LinearLayout>
	
</LinearLayout>